# openclaw-self-class

./: .gitignore  README.md
notes/: architecture.md  pitfalls.md
skills/feishu-meeting/references/: api-notes.md
skills/feishu-meeting/scripts/: sync_contacts.py
skills/idea-validator/: SKILL.md
skills/knowledge/: SKILL.md
skills/knowledge/scripts/: obsidian_daily.py  obsidian_review.py
skills/morning-brief/: SKILL.md  brief.py
skills/openclaw-upgrader/: SKILL.md
skills/openclaw-upgrader/src/: main.py
skills/personal-crm/: SKILL.md  personal_crm.py
skills/tmux-task-manager/scripts/: tmux_manager.py
zoe/: README.md  pyproject.toml
zoe-os/: MANIFESTO.md
zoe-os/designs/: architecture-dual-engine.md  simplecli-meets-pi.md  universal-architecture.md  zoe-swarm-distributed.md
zoe-os/experimental/: pbm_brain.py
zoe-os/kernel/: main.zig  sentry.zig
zoe-os/kernel-zig/: check.zig  pbm_reflex.zig  zoe-sentinel.zig  zoe-socket.zig  zoe-watcher.zig
zoe-os/sandbox/broken-project/: pyproject.toml
zoe-os/scenarios/: README.md
zoe-os/tools/: zoe-audit.py  zoe-doctor.py  zoe-ls.py  zoe-top.py
zoe/src/: pbm_prototype.py  zoe.py
zoe/src/zoe_agent/: core.py
