[project]
name = "zoe-agent"
version = "0.1.0"
description = "Minimalist AI Agent framework. One file, no framework, self-healing."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "akayj"}]
keywords = ["agent", "ai", "minimalist", "self-healing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "requests>=2.28",
]

[project.scripts]
zoe = "zoe_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zoe_agent"]
