[project]
name = "zoe-agent"
version = "0.1.2"
description = "Minimalist AI Agent framework. One file, no framework, self-healing."
readme = "README.md"
authors = [{name = "akayj"}]
dependencies = ["requests>=2.28"]

[project.scripts]
zoe = "zoe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zoe.py"]
